Created Category entity, InMemoryRepository data storage and ViewCategoriesUseCase. Created Categories in WebApp.

--- a/SupermarketManagement.WebApp/_Imports.razor
+++ b/SupermarketManagement.WebApp/_Imports.razor
@@ -8,3 +8,5 @@
 @using Microsoft.JSInterop
 @using SupermarketManagement.WebApp
 @using SupermarketManagement.WebApp.Shared
+@using SupermarketManagement.Entities
+@using SupermarketManagement.UseCases.UseCasesInterfaces
