Added AddCategoryUseCase and created AddCategory page.

--- a/SupermarketManagement.WebApp/Pages/Categories.razor
+++ b/SupermarketManagement.WebApp/Pages/Categories.razor
@@ -26,3 +26,8 @@
         </tbody>
     </table>
 }
+else
+{
+    <h5>There are no categories yet</h5>
+}
+<button class="btn btn-primary" @onclick="AddCategory_Click">Add Category</button>
