--- a/SupermarketManagement.WebApp/Pages/Categories.razor
+++ b/SupermarketManagement.WebApp/Pages/Categories.razor
@@ -2,7 +2,15 @@
 
 <h3>Manage Categories</h3>
 
-@if (categories is not null)
+@if (categories is null && ErrorMessage is null)
+{
+    <p>Loading categories...</p>
+}
+else if (ErrorMessage is not null)
+{
+    <h5 class="alert alert-danger">@ErrorMessage</h5>
+}
+else
 {
     <table class="table">
         <thead>
@@ -13,21 +21,17 @@
             </tr>
         </thead>
         <tbody>
-            @foreach (var category in categories)
+            @foreach (var category in categories!)
             {
                 <tr>
                     <td>@category.Name</td>
                     <td>@category.Description</td>
                     <td>
-                        <a href="">Edit</a>
+                        <a href="/EditCategory/@category.Id">Edit</a>
                     </td>
                 </tr>
             }
         </tbody>
     </table>
 }
-else
-{
-    <h5>There are no categories yet</h5>
-}
-<button class="btn btn-primary" @onclick="AddCategory_Click">Add Category</button>
+<button class="btn btn-primary" @onclick="HandleAddingCategory_Click">Add Category</button>
