Replaced CategoryUseCases into CategoriesUseCases folder.

--- a/SupermarketManagement.WebApp/Pages/Categories.razor
+++ b/SupermarketManagement.WebApp/Pages/Categories.razor
@@ -30,7 +30,7 @@ else
                     <td>@category.Description</td>
                     <td class="text-center">
                         <a href="/EditCategory/@category.Id">Edit</a>
-                        <button class="btn btn-link" style="padding:0; vertical-align:auto;"
+                        <button class="btn btn-link py-0 align-baseline"
                             @onclick="(() => HandleDeleting_Click(category.Id))">Delete
                         </button>
                     </td>
