--- a/SupermarketManagement.WebApp/Shared/NavMenu.razor
+++ b/SupermarketManagement.WebApp/Shared/NavMenu.razor
@@ -26,7 +26,12 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="Categories">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Manage Categories
+                <span class="oi oi-box" aria-hidden="true"></span> Manage Categories
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="Products">
+                <span class="oi oi-dashboard" aria-hidden="true"></span> Manage Products
             </NavLink>
         </div>
     </nav>
