--- a/SupermarketManagement.WebApp/_Imports.razor
+++ b/SupermarketManagement.WebApp/_Imports.razor
@@ -7,6 +7,7 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using SupermarketManagement.WebApp
+@using SupermarketManagement.WebApp.PageComponents
 @using SupermarketManagement.WebApp.Shared
 @using SupermarketManagement.Entities
 @using SupermarketManagement.UseCases.UseCasesInterfaces
