Added ViewProductsByCategoryIdUseCase. Created CashierConsole page and SelectProductForSelling razor component.

--- a/SupermarketManagement.WebApp/_Imports.razor
+++ b/SupermarketManagement.WebApp/_Imports.razor
@@ -8,6 +8,7 @@
 @using Microsoft.JSInterop
 @using SupermarketManagement.WebApp
 @using SupermarketManagement.WebApp.PageComponents
+@using SupermarketManagement.WebApp.PageComponents.Controls
 @using SupermarketManagement.WebApp.Shared
 @using SupermarketManagement.Entities
 @using SupermarketManagement.UseCases.UseCasesInterfaces
