--- a/SupermarketManagement.WebApp/Pages/EditProduct.razor
+++ b/SupermarketManagement.WebApp/Pages/EditProduct.razor
@@ -8,7 +8,7 @@
 }
 else if (ErrorMessage is not null)
 {
-    <h5 class="alert alert-danger my-4">@ErrorMessage</h5>
+    <ErrorDisplay ErrorMessage="@ErrorMessage" ResetError="HandleResetError" />
 }
 else
 {
@@ -57,5 +57,11 @@ else
         {
             ErrorMessage = ex.Message;
         }        
+    }
+
+    private void HandleResetError()
+    {
+        ErrorMessage = null;
+        StateHasChanged();
     }
 }
