--- a/SupermarketManagement.WebApp/PageComponents/Controls/SellProduct.razor
+++ b/SupermarketManagement.WebApp/PageComponents/Controls/SellProduct.razor
@@ -22,8 +22,8 @@
             <InputNumber id="qty" class="form-control" @bind-Value="ProductToSell.Quantity"></InputNumber>
         </div>
 
-        <div class="my-4">
-            <button class="btn btn-primary" type="submit">Sell</button>
+        <div class="my-4 col-6">
+            <button class="btn btn-primary form-control" type="submit">Sell</button>
         </div>
 
     </EditForm>
