--- a/SupermarketManagement.WebApp/Pages/Products.razor
+++ b/SupermarketManagement.WebApp/Pages/Products.razor
@@ -20,5 +20,5 @@ else
     {
         <h5 class="my-4">There is no category here.</h5>
     }
-    <button class="btn btn-primary" @onclick="HandleAddingProduct_Click">Add Category</button>
+    <button class="btn btn-primary" @onclick="HandleAddingProduct_Click">Add Product</button>
 }
