--- a/SupermarketManagement.WebApp/Pages/EditCategory.razor
+++ b/SupermarketManagement.WebApp/Pages/EditCategory.razor
@@ -41,11 +41,11 @@ else
     public Category? Category { get; set; }
     public string? ErrorMessage { get; set; }
 
-    protected override async Task OnParametersSetAsync()
+    protected override void OnParametersSet()
     {
         try
         {
-            Category = await GetCategoryByIdUseCase.Execute(CategoryId);
+            Category = GetCategoryByIdUseCase.Execute(CategoryId);
         }
         catch (Exception ex)
         {
@@ -53,11 +53,11 @@ else
         }
     }
 
-    private async Task OnValidSubmit()
+    private void OnValidSubmit()
     {
         try
         {
-            await EditCategoryUseCase.Execute(Category!);
+            EditCategoryUseCase.Execute(Category!);
         }
         catch (Exception ex)
         {
